[gd_scene load_steps=2 format=3 uid="uid://f1gpnrgxbw8p"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_awbgn"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_awbgn")

[node name="Addition" type="Button" parent="."]
offset_left = 5.0
offset_top = 5.0
offset_right = 79.0
offset_bottom = 36.0
text = "Addition"

[node name="Subtraction" type="Button" parent="."]
offset_left = 5.0
offset_top = 40.0
offset_right = 104.0
offset_bottom = 71.0
text = "Subtraction
"

[node name="Multiplication" type="Button" parent="."]
offset_left = 5.0
offset_top = 75.0
offset_right = 120.0
offset_bottom = 106.0
text = "Multiplication
"

[node name="Quit" type="Button" parent="."]
offset_left = 5.0
offset_top = 110.0
offset_right = 47.0
offset_bottom = 141.0
text = "Quit"

[connection signal="pressed" from="Addition" to="." method="_on_addition_pressed"]
[connection signal="pressed" from="Subtraction" to="." method="_on_subtraction_pressed"]
[connection signal="pressed" from="Multiplication" to="." method="_on_multiplication_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
